# codeo-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
codeo/: __main__.py  cli.py  codeo.py  utils.py
examples/: count_x_subarray.py  hi_codeo.go  repeated_letter.cs  shorter_path_turtle.cpp
tests/: test_codeo.py
