[tool.poetry]
name = "codeo"
version = "0.1.0"
description = ""
authors = ["Andres Ariza <aarizatr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
MechanicalSoup = "1.1.0"
rich = "10.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
