[tool.poetry]
name = "codeo"
version = "0.1.0"
description = ""
authors = ["Andres Ariza <aarizatr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
MechanicalSoup = "1.1.0"
rich = "10.12.0"
requests = "2.26.0"
beautifulsoup4 = "4.10.0"

[tool.poetry.dev-dependencies]
pytest = "5.2"
black = "21.10b0"
flake8 = "4.0.1"
isort = "5.10.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codeo = "codeo.__main__:main"